--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -22,6 +22,9 @@
         "username": "Username",
         "email": "Email",
         "password": "Password",
-        "register": "Register"
+        "register": "Register",
+        "forgottenPassword": "Forgotten your password ?",
+        "notRegistered": "Not registered yet ?",
+        "signUp": "Sign Up"
     }
 }
