--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -13,8 +13,30 @@
         "email": "Email",
         "password": "Password",
         "register": "Register",
-        "forgottenPassword": "Forgotten your password ?",
-        "notRegistered": "Not registered yet ?",
-        "alreadyRegistered": "Already have an account ?"
+        "forgottenpassword": "Forgotten your password?",
+        "notRegistered": "Not registered yet?",
+        "alreadyRegistered": "Already have an account?"
+    },
+    "error": {
+        "err": "Error",
+        "notfound": "Memories not found",
+        "404": "404, Page not found.",
+        "404_param": "This page does not exist.",
+        "memory_creation_error": "Error creating memory"
+    },
+    "accountmenu": {
+        "navbar": "Account",
+        "memories": "My Memories",
+        "admin": "Admin",
+        "settings": "Settings",
+        "log": "Login",
+        "logt": "LogOut"
+    },
+    "settingspage": {
+        "stitle": "Settings",
+        "passchange": "Change Password"
+    },
+    "memorypage": {
+        "myMemories": "My memories"
     }
 }
