--- a/public/static/locales/en/addMem.json
+++ b/public/static/locales/en/addMem.json
@@ -1,6 +1,7 @@
 {
     "addmemory": {
         "title": "Add a new memory",
+        "warning":"Warning : You're not logged, your memory will be published as \"Anonymous\"",
         "info_title": "Informations",
         "title_PH": "Title",
         "category_PH": "Category",
