--- a/public/static/locales/fi/addMem.json
+++ b/public/static/locales/fi/addMem.json
@@ -1,6 +1,7 @@
 {
     "addmemory": {
         "title": "Lisää uusi muisto",
+        "warning":"Varoitus: Et ole kirjautunut sisään, muistosi tullaan julkaisemaan \"Nimettömänä\"",
         "info_title": "Tiedot",
         "title_PH": "Otsikko",
         "category_PH": "Kategoria",
