Rebranding, add footer, multiple page improvement and fixes

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -37,6 +37,6 @@
         "passchange": "Change Password"
     },
     "memorypage": {
-        "myMemories": "My memories"
+        "myMemories": "My Memories"
     }
 }
