--- a/public/static/locales/en/about.json
+++ b/public/static/locales/en/about.json
@@ -1,42 +1,44 @@
 {
     "title": "About us",
     "intro": {
-        "p1": "\tHave you ever wanted to tell an exciting story somebody besides your friends or relatives? Or you know some interesting history facts about your city and going to share it? This website can help you in this. The main purpose is to collect, storage and share personal stories and histories of Turku residents.",
-        "p2": "There you can add a memory related with particular place. With it we can discover how did Turku looked like last years and decades."
+        "headliner":"Share your memories ans Stories!",
+        "p1": "\tDo you have an interesting memory or story that you would like to share? On this website, you can share your own memories, events or stories about the City of Turku. If you want, you can also share a photo related to your memory or story. The material you share will be available to other visitors on the website. All material will be stored in the archive collections of the Turku Museum Centre as part of our shared cultural heritage.",
+        "p2": "Here you can store your memories and connnect them to the places where your memories have taken place. Your memories will help us to dig deeper into the local history of Turku and experience the history of the city."
     },
     "how": {
-        "title": "How it works",
-        "p1": "Log in with e-mail or Facebook/Google account.",
-        "p2": "Tap \"Add memory\" to create a new post.",
-        "p3": "Write your story, add a title.",
-        "p4": "If you want, you can add a picture that is related to your memory",
-        "p5": "Tag a place connected with your memory on the map.",
-        "p6": "Publish a post."
+        "title": "How to do it",
+        "p1": "Log in with your e-mail or your Facebook/Google credentials.",
+        "p2": "Click on the \"Add memory\" button in order to create a memory.",
+        "p3": "Write your story and add a headline.",
+        "p4": "you can add one photo if you like",
+        "p5": "in the map, mark the place where your memory took place",
+        "p6": "Publish your memory."
     },
     "notice": {
-        "p1": "",
-        "p2": "",
-        "p3": ""
+        "title": "Please note that:",
+        "p1": "You must respect the privacy of other persons. If your memory involves other people, do not share their whole names but use nicknames or first names instead. As an exception tothis rule, it is permitted to mention the whole names of public figures.",
+        "p2": "If you add a photo, make sure that you have right to publish the photo.",
+        "p3": "Turku Museum Centre has the right to remove any material that has been reported as inappropriate."
     },
     "opportunity": {
-        "title": "Good opportunity",
-        "p1": "For elder citizens: to remember past days and get to know stories from their neighbors.",
-        "p2": "For a new generation: to find out something new about history of their homeland.",
-        "p3": "For city guests: to get acquainted with the city and discover interesting places to visit."
+        "title": "Good opportunity for",
+        "p1": "reminiscing and reading stories shared by others.",
+        "p2": "finding out about local history.",
+        "p3": "getting to know Turku and seeing the city from a new perspective."
     },
     "who": {
-        "title": "Who are we?",
-        "p1": "The website is created by Turku City Museums, which is responsible for the city’s cultural, art and natural history museums. Accumulated material may be a part of museum’s collections and can be used in research and exhibitions."
+        "title": "Further information about us",
+        "p1": "Turku Museum Centre is in charge of the City of Turku's culture, art and natural history museum operations. It creates and mainttains collections of objects and artwork and promote the conservation of the local cultural environment. Turku Museum Centre transmits cultural heritage and visual culture: research and sharing of information through expositions and publications forms the foundation of the museum operations."
     },
     "rights": {
-        "title": "",
-        "p1": "",
-        "p2": "",
-        "p3": ""
+        "title": "Rights for the stored material",
+        "p1": "By storing material on the website, the person hands over full rights to the material to Turku Museum Centre. Turku Museum Centre will use the material in its own operations and make the material available for the use of others according to the CC by nd 4.0.",
+        "p2": "CC by 4.0 means that the material can be freely shared,  i.e. copied and spread forward in any device and form, including comercially.",
+        "p3": "Turku Museum Centre processes personal data in accordance with section 4(article 6e) and section 6(article 9) of the Data Protection Art."
     },
     "what": {
-        "title": "What kinds of memories are there?",
-        "p1": "Here you can add any memory from such categories as sport, culture or school. Also there is possible to write about stories linked to special events.",
-        "p2": ""
+        "title": "What memories can you add to the website?",
+        "p1": "You can add any personal memories related to Turku and connect them to the location in which they or an event has taken place. You can also use the website for sharing your experiences and interesting stories about the city.",
+        "p2": "All material stored on the prikka.fi website will be added to the archive collections of Museum Centre. By storing your material, you consent to the utilisation of your material for research and presentation purposes according to the CC by 4.0."
     }
 }
