--- a/public/static/locales/en/addMemory.json
+++ b/public/static/locales/en/addMemory.json
@@ -1,11 +1,11 @@
 {
-    "title": "Add a new memory",
-    "warning": "Warning : You're not logged, your memory will be published as \"Anonymous\"",
+    "title": "Add a memory",
+    "warning": "Warning : You're not logged in, your memory will be published as \"Anonymous\"",
     "info_title": "Informations",
     "title_PH": "Title",
     "category_PH": "Category",
     "description_PH": "Description",
     "map_title": "Position",
     "continue_button": "Submit",
-    "success": "Muisto luotu"
+    "success": "Memory created"
 }
