--- a/public/static/locales/en/form.json
+++ b/public/static/locales/en/form.json
@@ -4,7 +4,7 @@
     "email": "Email",
     "password": "Password",
     "register": "Register",
-    "forgottenpassword": "Forgotten your password?",
-    "notRegistered": "Not registered yet?",
+    "forgottenpassword": "Did you forget your password?",
+    "notRegistered": "Have you not registered?",
     "alreadyRegistered": "Already have an account?"
 }
